static/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --primary: hsl(212, 90%, 47%);
  --dark-primary: hsl(212, 80%, 37%);
  --lightest: hsl(212, 100%, 98%);
  --darkest-grey: hsl(212, 100%, 8%);
  --darker-grey: hsla(212, 96%, 10%, 0.9);
  --dark-grey: hsla(212, 92%, 10%, 0.6);
  --grey: hsla(212, 88%, 10%, 0.5);
  --light-grey: hsla(212, 88%, 10%, 0.4);
  --lighter-grey: hsla(212, 88%, 10%, 0.3);
  --error: hsl(0, 80%, 50%);
  --success: hsl(120, 60%, 50%);
}

body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-size: 16px;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
  font-family: sans-serif;
}

body {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

section {
  padding: 0.8rem;
}

form {
  display: flex;
  flex-direction: column;
  min-width: 20rem;
}

h1 {
  font-family: sans-serif;
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  color: var(--darkest-grey);
}

h2 {
  font-family: sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 3rem;
  color: var(--darkest-grey);
}

p {
  color: var(--darkest-grey);
}

label {
  display: flex;
  flex-direction: column;
  font-family: sans-serif;
  font-size: 1em;
  font-weight: 500;
  color: var(--darker-grey);
  letter-spacing: 0.3px;
}

input {
  margin-top: 0.1rem;
  padding: 0.6rem 0 0.6rem 0.4rem;
  border-radius: 0.4em;
  border: 2px solid var(--light-grey);
  font-size: 1em;
  background-color: var(--lightest);
}

button {
  padding: 0.8rem;
  color: var(--lightest);
  background-color: var(--primary);
  border-radius: 0.4em;
  border: 1px solid var(--primary);
  font-size: 1em;
}

button:hover {
  background-color: var(--dark-primary);
  border: 1px solid var(--dark-primary);
}

.stack * + * {
  margin-top: 1rem;
}

.error {
  color: var(--error);
  margin-top: 1rem;
}

.transparent {
  color: transparent;
  margin-top: 1rem;
}

.authlink {
  color: var(--grey);
}

.description {
  margin-top: 2em;
}

.cta {
  display: block;
  margin-top: 1em;
}

.login,
.register {
  width: 100%;
}

.login {
  background-color: transparent;
  color: var(--primary);
}

.login:hover {
  color: var(--lightest);
}

.dashboard {
  justify-content: flex-start;
}

.account {
  display: flex;
  align-items: center;
}

.avatar {
  width: 3em;
  height: 3em;
  padding: 1em;
  color: var(--lightest);
  background-color: var(--primary);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 0.4em;
}

